# RustCode

./: .gitignore  Cargo.toml  README.md
cmd/: rust.ps1  rust_update.ps1  rust_versions.ps1
data/: test.txt
notes/: notes.md  rust_install.txt
notes/src/: basics.rs  data_structures.rs  modules.rs
python/: discrete_event.py  pyo3_tst.py
src/: basics.rs  main.rs  random_values.rs  sorting_vectors.rs
src/modules/: mod.rs
src/modules/api/: json.rs
src/modules/basics/: bsic.rs  mod.rs  vector_sort.rs
src/modules/concurrency/: Cargo.toml
src/modules/concurrency/src/: main.rs
src/modules/intro/: Cargo.toml
src/modules/intro/src/: main.rs
src/modules/quickreplace/: run.ps1
src/modules/quickreplace/src/: main.rs
src/modules/rust_sim/: Cargo.toml  README.md
src/modules/rust_sim/src/: main.rs  simulator.rs
src/modules/rust_sim/src/dev/: array_sim.rs  micro_sim.rs  vec_simulator.rs  vector_comp.rs  vector_loop.rs
src/modules/rust_tutorial/src/: control_flow.rs  data_types.rs  enums.rs  file_io.rs  functions.rs  generic_types.rs  hash_map.rs  iterators.rs  main.rs  ownership.rs  structs.rs  vectors.rs
src/modules/simulator/: models.rs
src/modules/standard/: std_lib.rs
src/modules/web/: endpoints.rs  server.rs
src/modules/webserver/: Cargo.toml
src/modules/webserver/src/: main.rs
src/pyo3/: Cargo.toml  pyproject.toml  requirements.txt
src/pyo3/src/: dev.rs  lib.rs
