[package]
name = "rustython"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustython"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version="0.19", features=["extension-module"]}
serde_json="1.0"

